# db_qt_opencv

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/image_test/: .imagetestmainwindow.cpp.swp  CMakeLists.txt  image_test_main_window.ui  imagetestmainwindow.cpp  imagetestmainwindow.h  main.cpp
db_server/: createdb.sh  image_select.sql  image_table.sql  insertImage.sql  insert_image.sql  types.sql  user.config.example.linux
src/: CMakeLists.txt  aircraftResources.qrc  db_opencv_singleton.cpp  db_opencv_singleton.h  opencvcore.cpp  opencvcore.h
src/classificator/: AircraftImage.cpp  AircraftImage.h  AircraftType.cpp  AircraftType.h  CMakeLists.txt
src/dataaccess/: CMakeLists.txt  opencv_database.cpp  opencv_database.h  opencv_db_pgresult.cpp  opencv_db_pgresult.h  opencv_db_result.cpp  opencv_db_result.h  opencv_pgdatabase.cpp  opencv_pgdatabase.h
src/gui/: AircraftSearchForm.cpp  AircraftSearchForm.h  AircraftTypeForm.cpp  AircraftTypeForm.h  AircraftTypeListForm.cpp  AircraftTypeListForm.h  AircraftTypeModel.cpp  AircraftTypeModel.h  CMakeLists.txt  aircraft_search_form.ui  aircraft_type_form.ui  aircraft_type_list_form.ui  cvImageForm.cpp  cvImageForm.h  cvImageListForm.cpp  cvImageListForm.h  cvImageModel.cpp  cvImageModel.h  cv_image_form.ui  cv_image_list_form.ui  dbLoginForm.cpp  dbLoginForm.h  db_login_form.ui
src/imagefactories/: CMakeLists.txt  dbImageClass.cpp  dbImageClass.h  dbLoader.cpp  dbLoader.h  dbWriter.cpp  dbWriter.h
